[gd_scene load_steps=10 format=3 uid="uid://b5vvlt3okj3vw"]

[ext_resource type="Script" path="res://src/player/rendering/BoatRendering.gd" id="1_4ynlb"]
[ext_resource type="ArrayMesh" uid="uid://brq2a4xqhdyyg" path="res://ressources/3D/boat/ship.obj" id="1_w5rlr"]
[ext_resource type="ArrayMesh" uid="uid://dnojyu20br1mh" path="res://ressources/3D/boat/sail_left.obj" id="2_s6s0i"]
[ext_resource type="Script" path="res://src/player/rendering/SailRender.gd" id="3_bt6k6"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_l3xde"]
albedo_color = Color(1, 0, 0, 1)

[sub_resource type="PrismMesh" id="PrismMesh_wx8c4"]
material = SubResource("StandardMaterial3D_l3xde")
size = Vector3(0.1, 0.5, 0.01)

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_4nx2l"]
lifetime_randomness = 0.4
particle_flag_rotate_y = true
particle_flag_damping_as_friction = true
angle_max = 360.0
direction = Vector3(0, 1, 1)
spread = 180.0
initial_velocity_min = 0.1
initial_velocity_max = 5.0
angular_velocity_min = -720.0
angular_velocity_max = 720.0
gravity = Vector3(0, -5, 0)
scale_min = 0.2

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_m884n"]
albedo_color = Color(0.65098, 0.423529, 0.258824, 1)

[sub_resource type="BoxMesh" id="BoxMesh_b44pt"]
material = SubResource("StandardMaterial3D_m884n")
size = Vector3(0.1, 0.02, 0.3)

[node name="BoatRendering" type="Node3D"]
script = ExtResource("1_4ynlb")

[node name="Body" type="Node3D" parent="."]
unique_name_in_owner = true
metadata/_edit_lock_ = true

[node name="body" type="MeshInstance3D" parent="Body"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.221561, 0, 0)
mesh = ExtResource("1_w5rlr")
skeleton = NodePath("../../..")

[node name="windPivot" type="Node3D" parent="Body"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.166822, 1.75815, 0.0089255)

[node name="weathercock" type="MeshInstance3D" parent="Body/windPivot"]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, -0.253114, -0.048789, 0)
mesh = SubResource("PrismMesh_wx8c4")
skeleton = NodePath("../../Sails/SailPivot")

[node name="Sails" type="Node3D" parent="Body"]
unique_name_in_owner = true

[node name="SailPivot" type="Node3D" parent="Body/Sails"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.172241, 1.17929, 0)
script = ExtResource("3_bt6k6")

[node name="sail" type="MeshInstance3D" parent="Body/Sails/SailPivot"]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, -0.0485303, -0.191933, 0)
mesh = ExtResource("2_s6s0i")
skeleton = NodePath("../../../body")

[node name="SailPivot2" type="Node3D" parent="Body/Sails"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.842934, 1.6733, 0)
script = ExtResource("3_bt6k6")

[node name="sail" type="MeshInstance3D" parent="Body/Sails/SailPivot2"]
transform = Transform3D(-0.499989, 0.0054035, 1.20797e-07, 0.00337719, 0.799982, -4.72389e-10, -7.54982e-08, 3.43527e-10, -0.8, -0.0333799, -0.191933, 0)
mesh = ExtResource("2_s6s0i")
skeleton = NodePath("../../../body")

[node name="SailPivot3" type="Node3D" parent="Body/Sails"]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0.670561, 0.965817, 0)
script = ExtResource("3_bt6k6")

[node name="sail" type="MeshInstance3D" parent="Body/Sails/SailPivot3"]
transform = Transform3D(-1, 0, 1.50996e-07, 0, 1.5, 0, -1.50996e-07, 0, -1, -0.0162916, -0.0385234, 0)
mesh = ExtResource("2_s6s0i")
skeleton = NodePath("../../../body")

[node name="NameTagPosition" type="Marker3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.81034, 0)

[node name="HitParticles" type="GPUParticles3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(0.811931, 0, -0.583754, 0, 1, 0, 0.583754, 0, 0.811931, 0.509189, 0.502302, 0.400428)
emitting = false
amount = 20
amount_ratio = 0.7
one_shot = true
speed_scale = 1.1
explosiveness = 0.8
randomness = 1.0
collision_base_size = 0.1
visibility_aabb = AABB(-2.33222, -2.82435, -2.35378, 4.66445, 5.64869, 4.70757)
process_material = SubResource("ParticleProcessMaterial_4nx2l")
draw_pass_1 = SubResource("BoxMesh_b44pt")
